# Bucheronne

./: .gitignore  README.md  pyproject.toml
.github/workflows/: automatic.yml  page.yml
doc/: conf.py  index.rst
src/bucheronne/: __init__.py  __main__.py  github_branch.py  github_token.py
tests/: test_github_token.py
