[project]
name = "bucheronne"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Baduit", email = "23459846+Baduit@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
    "pygithub>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bucheronne" = "bucheronne:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "sphinxawesome-theme>=5.2.0",
    "myst-parser>=4.0.0",
    "sphinx>=7.3.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bucheronne"]
